add user credential when create user

--- a/user_service/Makefile
+++ b/user_service/Makefile
@@ -2,4 +2,4 @@ run:
 	go run cmd/*.go server
 
 gen-proto:
-	protoc --proto_path=../third_party/googleapis/google/api --go_out=. ./api/*.proto
+	protoc -I ../third_party/googleapis -I ./api --go_out=. ./api/*.proto
