--- a/user_service/Makefile
+++ b/user_service/Makefile
@@ -7,3 +7,9 @@ gen-proto:
 	--grpc-gateway_opt logtostderr=true \
     --grpc-gateway_opt paths=source_relative \
 	./api/*.proto
+
+migrate-up:
+	go run cmd/*.go migrate up
+
+migrate-down:
+	go run cmd/*.go migrate down 1
